--- a/plugins/TradingPlugin/config.json
+++ b/plugins/TradingPlugin/config.json
@@ -1,7 +1,4 @@
 {
  "channel": "TradingPlugin",
- "routes": ["TradeInformation"],
- "ip" : "127.0.0.1",
- "password": "toto1",
- "redisPort": "6379"
+ "routes": ["TradeInformation"]
 }
